--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <title>Flex Panels 💪</title>
   <link href='styles.css' rel='stylesheet' type='text/css'>
   <link rel="icon" href="https://fav.farm/🔥" />
 </head>
+
 <body>
-  <style>
-    
-
-  </style>
-
-
   <div class="panels">
     <div class="panel panel1">
       <p>Hey</p>
@@ -42,10 +38,25 @@
   </div>
 
   <script>
+    const panels = document.querySelectorAll('.panel');
+
+    function toggleOpen() {
+      this.classList.toggle('open');
+    }
+
+    function toggleActive(e) {
+      if (e.propertyName.includes('flex')) {
+        this.classList.toggle('open-active');
+      }
+    }
+
+    panels.forEach(panel => panel.addEventListener('click', toggleOpen));
+    panels.forEach(panel => panel.addEventListener('transitionend', toggleActive));
 
   </script>
 
 
 
 </body>
+
 </html>
